--- a/appspecific.json
+++ b/appspecific.json
@@ -1,10 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /var/www/html
+  - source: /    # Source directory in the deployment package
+    destination: /var/www/html/  # Destination directory on the EC2 instance
 hooks:
-  AfterInstall:
-    - location: scripts/restart_server.sh
+  BeforeInstall:
+    - location: scripts/before_install.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
